@@ -190,18 +190,21 @@ Gernot Deinzer.
 Oswaldo Dieguez,
 Guido Fratesi,
 Ralph Gebauer,
+Martin Hilgeman,
 Yosuke Kanai,
 Axel Kohlmeyer,
 Konstantin Kudin,
 Michele Lazzeri,
 Kurt Maeder,
 Francesco Mauri,
+Nicolas Mounet,
 Pasquale Pavone,
 Mickael Profeta,
 Guido Roma,
 Manu Sharma,
 Alexander Smogunov,
 Kurt Stokbro,
+Pascal Thibaudeau,
 Antonio Tilocca,
 Renata Wentzcovitch,
 Yudong Wu,
